application: add dummy --no-desktop cmd option

Since there are few apps that are using it.

https://bugzilla.gnome.org/show_bug.cgi?id=771051